--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "speakingurl": "^14.0.1",
     "store2": "^2.8.0",
     "strip-dirs": "^3.0.0",
-    "svelte": "^3.6.5",
+    "svelte": "3.23.2",
     "table": "^5.2.3",
     "tmp": "^0.1.0",
     "uritemplate": "^0.3.4",
